Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shows-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: shows-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: shows-app
    spec:
      containers:
      - name: shows-app
        image: kristinakoneva/ci-cd-project:latest
        ports:
        - containerPort: 8080
