Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shows-app-service
spec:
  selector:
    app: shows-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
