Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shows-app-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-app-service
                port:
                  number: 80
